--- a/box.css
+++ b/box.css
@@ -1,13 +1,13 @@
 .box1 {
   width: 300px;
   height: 300px;
-  background-color: red;
+  background-color: #ff9900;
   margin: 30px;
   padding: 30px;
 }
 .box2 {
   width: 100px;
   height: 100px;
-  background-color: blue;
-  border: 5px solid yellow;
+  background-color: #66cc00;
+  border: 5px solid #ccff99;
 }
